--- a/lk/src/app/questions/edit-question-dialog/edit-question-dialog.component.html
+++ b/lk/src/app/questions/edit-question-dialog/edit-question-dialog.component.html
@@ -11,23 +11,17 @@
                 <br/>
                 <mat-form-field style="width: 100%; height: 400px">
                     <mat-label>Ответ</mat-label>
-                    <textarea matInput placeholder="Введите ответ" formControlName="responseCtrl" required></textarea>
+                    <textarea
+                            matInput
+                            formControlName="responseCtrl"
+                            required
+                    >
+
+                    </textarea>
                 </mat-form-field>
                 <div mat-dialog-actions>
-                    <button mat-button matStepperNext>Дальше</button>
-                </div>
-            </form>
-        </mat-step>
-        <mat-step [stepControl]="secondFormGroup">
-            <form [formGroup]="secondFormGroup">
-                <ng-template matStepLabel>Выберите родительский вопрос</ng-template>
-                <mat-radio-group formControlName="questionParentId">
-                    <mat-radio-button *ngFor="let question of questionsUnlessChild | async" [value]="question.id" class="mat-radio-button">
-                        {{question.question}}
-                    </mat-radio-button>
-                </mat-radio-group>
-                <div mat-dialog-actions>
                     <button mat-button (click)="saveQuestion()">Сохранить</button>
+                    <button mat-button (click)="no()">Отмена</button>
                 </div>
             </form>
         </mat-step>
