--- a/lk/src/app/dialogs/dialogs.component.sass
+++ b/lk/src/app/dialogs/dialogs.component.sass
@@ -69,3 +69,16 @@
 .dialog-first-message
   text-decoration: #9FA115 underline
   font-style: italic
+
+.menu1
+  display: flex
+  justify-content: space-between
+  width: 100%
+
+.dialog-filter-btn
+  background: linear-gradient(180deg, #4A76DB 0%, #4670C7 100%)
+  border-radius: 3px
+  width: 157px
+  height: 50px
+  margin-right: 5em
+  margin-bottom: 1em
