CBF-37 Фильтр для диалога
+элемент управления select

--- a/lk/src/app/dialogs/dialog-filter/dialog-filter.component.html
+++ b/lk/src/app/dialogs/dialog-filter/dialog-filter.component.html
@@ -1,1 +1,6 @@
-<p>dialog-filter works!</p>
+<div [@openCloseFilter]="opened ? 'open' : 'closed'">
+    <div class="dialog-filter-curtain" (click)="hide()"></div>
+    <div class="dialog-filter">
+        
+    </div>
+</div>
