--- a/lk/src/app/main/main.component.html
+++ b/lk/src/app/main/main.component.html
@@ -1,3 +1,4 @@
+<dialog-filter></dialog-filter>
 <mat-sidenav-container class="main-container">
     <mat-sidenav opened mode="side" class="main-left-side">
         <div class="ao-res-logo">
