--- a/lk/src/app/dialogs/dialogs.component.html
+++ b/lk/src/app/dialogs/dialogs.component.html
@@ -21,7 +21,7 @@
                (click)="activeLink = linkType.offline">Офлайн</a>
         </div>
         <div>
-            <button mat-flat-button class="dialog-filter-btn">
+            <button mat-flat-button class="dialog-filter-btn" (click)="toggleDialogFilter()">
                 <mat-icon svgIcon="filter"></mat-icon>
                 Фильтр
             </button>
