--- a/lk/src/app/components/select/select.component.html
+++ b/lk/src/app/components/select/select.component.html
@@ -1,14 +1,14 @@
-<div class="select-container">
-    <div class="select-value-container">
-        <div class="select-value">
-            {{selectedItem}}
+<div class="filter-container">
+    <div class="filter-value-container">
+        <div class="filter-value editor editableDiv2" contenteditable="true" placeholder="Статус диалога"
+             [ngClass]="{'placeholder-active': selectedItem === '' || selectedItem === undefined}" [innerHTML]="selectedItem">
         </div>
-        <div class="select-open" (click)="isOpen = !isOpen">
+        <div class="filter-open pointer" (click)="isOpen = !isOpen">
             <img src="assets/arrow_down.svg" *ngIf="!isOpen"/>
             <img src="assets/arrow_up.svg" *ngIf="isOpen"/>
         </div>
     </div>
-    <div class="select-items-container" *ngIf="isOpen">`
-        <div *ngFor="let item of items" class="select-value-item" (click)="selectItem(item)">{{item}}</div>
+    <div class="select-items-container" *ngIf="isOpen">
+        <div *ngFor="let item of items" class="select-value-item" (click)="selectItem(item)">{{item[selectPattern.name]}}</div>
     </div>
 </div>
