--- a/lk/src/app/dialogs/dialog-filter/dialog-filter.component.sass
+++ b/lk/src/app/dialogs/dialog-filter/dialog-filter.component.sass
@@ -15,5 +15,13 @@
   background: #FFFFFF
   top: 114px
   right: 87px
-  z-index: 10000
+  z-index: 100
+  padding: 40px
 
+.dialog-filter-elements
+  width: 100%
+  height: 262px
+  border: 1px solid black
+  -webkit-column-count: 2
+  -moz-column-count: 2
+  column-count: 2
