--- a/lk/src/app/components/select/select.component.html
+++ b/lk/src/app/components/select/select.component.html
@@ -1,14 +1,23 @@
 <div class="filter-container">
-    <div class="filter-value-container">
+    <div class="filter-value-container" #filterValueContainer>
         <div class="filter-value editor editableDiv2" contenteditable="true" placeholder="Статус диалога"
-             [ngClass]="{'placeholder-active': selectedItem === '' || selectedItem === undefined}" [innerHTML]="selectedItem">
+             [ngClass]="{'placeholder-active': selectedItem === undefined}" [innerHTML]="selectedItem === undefined ? '' : selectedItem[selectPattern.name]">
         </div>
         <div class="filter-open pointer" (click)="isOpen = !isOpen">
             <img src="assets/arrow_down.svg" *ngIf="!isOpen"/>
             <img src="assets/arrow_up.svg" *ngIf="isOpen"/>
         </div>
     </div>
-    <div class="select-items-container" *ngIf="isOpen">
-        <div *ngFor="let item of items" class="select-value-item" (click)="selectItem(item)">{{item[selectPattern.name]}}</div>
+    <div class="select-items-overlay-container" *ngIf="isOpen" (click)="isOpen = false">
+        <div class="select-items-container" [style]="{ top: componentTop, left: componentLeft, width: componentWidth }">
+            <div *ngFor="let item of items"
+                 class="select-value-item"
+                 (click)="selectItem(item)"
+            >
+                <div>
+                    {{item[selectPattern.name]}}
+                </div>
+            </div>
+        </div>
     </div>
 </div>
