--- a/lk/src/app/components/select/select.component.sass
+++ b/lk/src/app/components/select/select.component.sass
@@ -4,6 +4,14 @@
   width: 19px
   height: 10px
 
+.select-items-overlay-container
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  z-index: 10
+
 .select-items-container
   position: absolute
   width: 100%
@@ -14,10 +22,16 @@
   z-index: 10
 
 .select-value-item
+  display: flex
+  align-items: center
   width: 100%
   height: 54px
   @include common.font-roboto(15px, 18px)
   cursor: pointer
+  box-sizing: border-box
+  padding:
+    left: 1em
+    right: 1em
 
 .select-value-item:hover
   background: #D3D6DE
@@ -31,4 +45,3 @@
 
 .placeholder-active
   color: gray
-
