CBF-37 Фильтр. фиксы по верстке и логике

--- a/lk/src/app/components/date-picker/date-picker.component.html
+++ b/lk/src/app/components/date-picker/date-picker.component.html
@@ -2,8 +2,8 @@
     <div class="filter-value-container">
         <div class="filter-value">
             <mat-form-field class="example-full-width" style="width: 100%; height: 100%">
-                <mat-label>Укажите дату открытия</mat-label>
-                <input matInput [matDatepicker]="picker">
+                <mat-label>{{placeholder}}</mat-label>
+                <input matInput [matDatepicker]="picker" [value]="date" (dateChange)="setDate($event)">
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
         </div>
