--- a/lk/src/app/components/filter-elements.sass
+++ b/lk/src/app/components/filter-elements.sass
@@ -6,9 +6,8 @@
   border: 1px solid #D5DDED
   box-sizing: border-box
   border-radius: 3px
-  margin-bottom: 2em
-  display: inline-block
-  display: -moz-inline-block
+  margin-bottom: 2.5em
+  display: block
 
 .filter-value-container
   display: flex
@@ -17,13 +16,13 @@
 
 .filter-value
   width: 100%
-  height: 100%
 
 .editor
   outline: none
   padding:
-    top: 1em
     left: 1em
+  border: 0
+  font-size: 15px
 
 .filter-open
   width: 54px
