--- a/lk/src/app/components/filter-input/filter-input.component.html
+++ b/lk/src/app/components/filter-input/filter-input.component.html
@@ -1,9 +1,15 @@
 <div class="filter-container">
     <div class="filter-value-container">
-        <div class="filter-value editor editableDiv2" contenteditable="true" placeholder="Статус диалога"
-             [ngClass]="{'placeholder-active': filter === '' || filter === undefined}" [innerHTML]="filter">
-        </div>
-        <div class="filter-open">
+        <input
+            #editor
+            class="filter-value editor editableDiv2"
+            contenteditable="true"
+            [attr.placeholder]="placeholder"
+            [ngClass]="{'placeholder-active': isPlaceholder}"
+            (blur)="setFilter($event)"
+            [(ngModel)]="filter"
+        />
+        <div class="filter-open" style="border-left: 0">
             <img src="assets/lens.svg"/>
         </div>
     </div>
