--- a/lk/src/app/dialogs/dialog-filter/dialog-filter.component.sass
+++ b/lk/src/app/dialogs/dialog-filter/dialog-filter.component.sass
@@ -10,8 +10,8 @@
 
 .dialog-filter
   position: absolute
-  width: 740px
-  height: 356px
+  width: 658px
+  height: 323px
   background: #FFFFFF
   top: 114px
   right: 87px
@@ -21,7 +21,32 @@
 .dialog-filter-elements
   width: 100%
   height: 262px
-  border: 1px solid black
   -webkit-column-count: 2
   -moz-column-count: 2
   column-count: 2
+
+.dialog-filter-actions
+  width: 100%
+  height: calc(100% - 262px)
+  box-sizing: border-box
+  display: flex
+
+.dialog-filter-btn
+  width: 150px
+  height: 54px
+  border-radius: 3px
+  justify-content: center
+  align-items: center
+  display: flex
+  margin:
+    top: 0.5em
+    right: 2em
+
+.dialog-filter-apply-btn
+  background: #2E5CC7
+  color: #FFFFFF
+
+.dialog-filter-discard-btn
+  background: linear-gradient(180deg, #FFFFFF 0%, #F8F8FC 100%)
+  border: 1px solid #D5DDED
+  box-sizing: border-box
