правильное отображение тип. вопросов

--- a/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
+++ b/front/ChatBot/src/app/questions/main-questions/main-questions.component.sass
@@ -33,6 +33,9 @@
 .main-questions-block.elements
   display: flex
   flex-wrap: wrap
+  height: 297px
+  overflow: overlay
+  -webkit-overflow-scrolling: overlay
 
 .editableDiv2[contentEditable="true"]:empty:before
   content: attr(placeholder)
