--- a/front/ChatBot/src/app/auth-form/auth-form.component.sass
+++ b/front/ChatBot/src/app/auth-form/auth-form.component.sass
@@ -19,6 +19,7 @@
   border-radius: 5px
   padding-top: 1.1em
   padding-left: 1em
+  @include common.font-roboto(15px, 17px)
 
 .form-input.fio
   margin-top: 0
