--- a/front/ChatBot/src/app/chat-header/chat-header.component.html
+++ b/front/ChatBot/src/app/chat-header/chat-header.component.html
@@ -4,7 +4,7 @@
     <div class="operators">
     <span class="header-element question" (click)="onOpenQuestions($event)">
       <img
-        src="assets/questions.svg"
+        src="assets/home.svg"
         class="question-icon"
         alt="Вопросы"
       />
