--- a/front/ChatBot/src/app/operator-message/operator-message.component.html
+++ b/front/ChatBot/src/app/operator-message/operator-message.component.html
@@ -17,7 +17,7 @@
 
 <div class="operator-message button-message" *ngIf="message.type == messageType.ButtonForForm" (click)="fillAuthForm()">
   <div class="msg-left button-left">
-    <div>{{message.content}}</div>
+    <div style="text-align: center">{{message.content}}</div>
   </div>
   <div class="right-block button-right"></div>
 </div>
