--- a/lk/src/app/client-chat-dialog/client-chat-dialog.component.sass
+++ b/lk/src/app/client-chat-dialog/client-chat-dialog.component.sass
@@ -1,12 +1,14 @@
 .chat
-  height: 350px
-  border: 1px solid red
+  height: 80%
 
 .chat-message
-  height: 351px
+  height: 100%
   overflow-y: auto
   scroll-behavior: smooth
-  background-color: #F7F8FA
+  //background-color: #F7F8FA
+  background: url('../../assets/dialog_phone.jpg')
+  background-size: 100% 100%
+  box-shadow: inset 0 0 5px -2px #555
 
 .chat-message::-webkit-scrollbar
   width: 6px
@@ -20,7 +22,6 @@
 
 .chat-editor
   outline: none
-  border: 1px solid blue
   height: 3em
 
 .placeholder-active
@@ -28,6 +29,10 @@
 
 .editor-container
   display: flex
+  background-color: #FFFFFF
+  border: 1px solid #D5DDED
+  box-sizing: border-box
+  border-radius: 3px
 
 .chat-editor
   width: 100%
