--- a/lk/src/app/dialog/client-message/client-message.component.sass
+++ b/lk/src/app/dialog/client-message/client-message.component.sass
@@ -9,6 +9,12 @@
 .message
   width: 80%
   background-color: #EDF3FF
+  border: 1px solid #D5DDED
+  box-sizing: border-box
+  border-radius: 3px
+  margin-left: 3px
+  box-shadow: inset 0 0 4px 0px #ccc
+  margin-top: 0.2em
 
 .msg-status
   text-align: right
