--- a/lk/src/app/dialog/operator-message/operator-message.component.sass
+++ b/lk/src/app/dialog/operator-message/operator-message.component.sass
@@ -8,6 +8,13 @@
 
 .message
   width: 80%
+  border: 1px solid #D5DDED
+  box-sizing: border-box
+  border-radius: 3px
+  margin-right: 3px
+  background: #D5DDED
+  box-shadow: inset 0 0 4px 0px #ccc
+  margin-top: 0.2em
 
 .msg-status
   text-align: right
