--- a/lk/src/app/dialogs/dialogs.component.sass
+++ b/lk/src/app/dialogs/dialogs.component.sass
@@ -82,3 +82,9 @@
   height: 50px
   margin-right: 5em
   margin-bottom: 1em
+
+.dialog-panel-class
+  background: #2E5CC7
+
+::ng-deep mat-dialog-container.mat-dialog-container
+  background-color: #f5f5f5
