--- a/front/ChatBot/src/app/chat-header/chat-header.component.sass
+++ b/front/ChatBot/src/app/chat-header/chat-header.component.sass
@@ -3,7 +3,7 @@
 .company
   position: absolute
   @include common.font-roboto(17px, 20px, bold)
-  color: #333740
+  color: #FFFFFF
   padding:
     top: 27px
     left: 25px
