--- a/front/ChatBot/src/app/auth-form/auth-form.component.html
+++ b/front/ChatBot/src/app/auth-form/auth-form.component.html
@@ -32,27 +32,22 @@
       ></div>
     </div>
   </div>
-  <div class="form-input-container">
-    <input
-      [imask]="{mask: '{+7(}000{)} 000{-}00{-}00', placeholder: '_'}"
-      [unmask]="true"
-      (accept)="onPhoneAccept($event)"
-      (complete)="onPhoneComplete($event)"
-      placeholder="Укажите свой телефон"
-      class="form-input"
-      [(ngModel)]="phone"
-      style="padding-top: 0"
-    />
-<!--    <div-->
-<!--      #phoneEditor-->
-<!--      contenteditable="true"-->
-<!--      class="form-input editable-placeholder"-->
-<!--      placeholder="Укажите свой телефон"-->
-<!--      [ngClass]="{'placeholder-active': phone === ''}"-->
-<!--      (keypress)="phoneEnter($event)"-->
-<!--      (input)="phoneInput($event.target)"-->
-<!--      (keydown.enter)="phoneOnKeydownEnter($event)"-->
-<!--    ></div>-->
+  <div>
+    <div style="justify-content: center; align-items: center; display: flex; width: 100%">
+      <span style="color: #E52D2E" *ngIf="phoneIsNotValid">Не верный формат номера телефона</span>
+    </div>
+    <div class="form-input-container">
+      <input
+        [imask]="{mask: '{+7(}000{)} 000{-}00{-}00', placeholder: '_'}"
+        [unmask]="true"
+        (accept)="onPhoneAccept($event)"
+        (complete)="onPhoneComplete($event)"
+        placeholder="Укажите свой телефон"
+        class="form-input"
+        [(ngModel)]="phone"
+        style="padding-top: 0"
+      />
+    </div>
   </div>
   <div class="form-input-container" *ngIf="!(isShift | async)">
     <div
