--- a/front/ChatBot/src/app/operator-message/operator-message.component.sass
+++ b/front/ChatBot/src/app/operator-message/operator-message.component.sass
@@ -49,3 +49,14 @@
 
 .right-block.button-right
   width: 40%
+
+.close-session
+  background-color: #3757A1
+  height: 50px
+  border-radius: 50px
+  color: #FFFFFF
+  @include common.font-roboto(11px, 13px, 500)
+  display: flex
+  justify-content: center
+  align-items: center
+  text-transform: uppercase
