--- a/front/ChatBot/src/app/base-chat-header/base-chat-header.component.sass
+++ b/front/ChatBot/src/app/base-chat-header/base-chat-header.component.sass
@@ -13,8 +13,12 @@
 .header-element
   color: white
   padding:
-    left: 2em
     top: 1.6em
+  margin:
+    left: 0.5em
+
+.header-actions
+  display: flex
 
 .header-message
   text-transform: uppercase
@@ -26,12 +30,14 @@
   border: 1px solid transparent
   cursor: pointer
 
-.close-icon
+.actions-icon
   width: 20px
-  margin-right: 1em
 
-.close-icon:hover
+.actions-icon:hover
   width: 22px
 
-.close-btn
+.actions-btn
   cursor: pointer
+
+.close-container
+  display: flex
