--- a/lk/src/app/dialogs/dialogs.component.sass
+++ b/lk/src/app/dialogs/dialogs.component.sass
@@ -9,10 +9,10 @@
   flex-direction: row-reverse
 
 .dialog-number
-  width: 7%
+  width: 6%
 
 .dialog-status
-  width: 7%
+  width: 6%
 
 .dialog-status.active
   color: #6EB443
@@ -24,16 +24,16 @@
   color: #3757A1
 
 .dialog-date-created
-  width: 10%
+  width: 9%
 
 .dialog-date-closed
-  width: 10%
+  width: 9%
 
 .dialog-operator
-  width: 19%
+  width: 17%
 
 .dialog-client
-  width: 19%
+  width: 21%
 
 .card
   margin:
@@ -46,7 +46,7 @@
   border: 1px solid #D5DDED
   box-sizing: border-box
   border-radius: 3px
-  width: 190px
+  width: 145px
   height: 50px
   margin:
     left: 5px
@@ -65,6 +65,10 @@
   display: flex
   @include common.font-roboto(14px, 16px, )
   color: #9FA1B5
+  box-sizing: border-box
+  padding:
+    left: 1em
+    right: 1em
 
 .dialog-first-message
   text-decoration: #9FA115 underline
