--- a/lk/src/app/client-chat-dialog/client-chat-dialog.component.sass
+++ b/lk/src/app/client-chat-dialog/client-chat-dialog.component.sass
@@ -24,10 +24,8 @@
   outline: none
   height: 3em
 
-.placeholder-active
-  color: gray
-
 .editor-container
+  position: relative
   display: flex
   background-color: #FFFFFF
   border: 1px solid #D5DDED
@@ -42,6 +40,9 @@
   cursor: text
   width: 100%
 
+.placeholder-active
+  color: gray
+
 .btn-send
   width: 40px
   height: 40px
@@ -49,3 +50,10 @@
   color: #DADEE5
   text-align: center
   padding-top: 10px
+
+.editor-disabled
+  position: absolute
+  width: 100%
+  height: 100%
+  background-color: #000000
+  opacity: 0.18
