--- a/front/ChatBot/src/app/msg-container/msg-container.component.sass
+++ b/front/ChatBot/src/app/msg-container/msg-container.component.sass
@@ -13,6 +13,7 @@
   box-sizing: border-box
   box-shadow: 0px 3px 15px rgba(36, 64, 128, 0.2)
   border-radius: 2px
+  z-index: 10000
 
 .chatbot
   position: absolute
