--- a/lk/src/app/main/main.component.html
+++ b/lk/src/app/main/main.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="main-menu">
             <mat-nav-list>
-                <mat-list-item style="text-align: center" (click)="goto('dialogs')">
+                <mat-list-item style="text-align: center" (click)="goto('dialogs')" *auth="'DialogPage'">
                     <button mat-icon-button class="list-button">
                         <mat-icon svgIcon="res-chat"></mat-icon>&nbsp;&nbsp;
                         <span class="side-nav-menu-caption">Диалоги</span>
@@ -15,7 +15,7 @@
                         <mat-icon class="res-menu-active-icon" svgIcon="res-menu-active"></mat-icon>
                     </div>
                 </mat-list-item>
-                <mat-list-item style="text-align: center" (click)="goto('questions')">
+                <mat-list-item style="text-align: center" (click)="goto('questions')" *auth="'QuestionManager'">
                     <button mat-icon-button class="list-button">
                         <mat-icon svgIcon="res-chat"></mat-icon>&nbsp;&nbsp;
                         <span class="side-nav-menu-caption">Вопросы</span>
@@ -24,7 +24,7 @@
                         <mat-icon class="res-menu-active-icon" svgIcon="res-menu-active"></mat-icon>
                     </div>
                 </mat-list-item>
-                <mat-list-item style="text-align: center" (click)="goto('operators')">
+                <mat-list-item style="text-align: center" (click)="goto('operators')" *auth="'OperatorManager'">
                     <button mat-icon-button class="list-button">
                         <mat-icon svgIcon="res-chat"></mat-icon>&nbsp;&nbsp;
                         <span class="side-nav-menu-caption">Операторы</span>
