логин на отдельную страницу
видимость кнопок

--- a/lk/src/app/client-chat-dialog/client-chat-dialog.component.html
+++ b/lk/src/app/client-chat-dialog/client-chat-dialog.component.html
@@ -31,7 +31,7 @@
                     mat-raised-button
                     color="primary"
                     (click)="closeDialog()"
-                    [disabled]="dialog.dialogStatus === dialogStatus.Rejected || dialog.dialogStatus === dialogStatus.Closed"
+                    [disabled]="!(dialog.dialogStatus === dialogStatus.Active)"
             >Закрыть диалог</button>
         </div>
     </div>
